# itchysats

./: .dockerignore  CHANGELOG.md  Dockerfile  dprint.json
.cargo/: config.toml
.github/workflows/: build-release-binary.yml  ci.yml  docker.yml
cfd_protocol/: Cargo.toml
cfd_protocol/src/: lib.rs
daemon/: Cargo.toml  sqlx-data.json
daemon/migrations/: 20211123052729_introduce-event-sourceing.sql  20211207083046_remove-order-from-database.sql
daemon/src/: auth.rs  cfd.rs  cfd_actors.rs  collab_settlement_taker.rs  connection.rs  db.rs  housekeeping.rs  keypair.rs  lib.rs  main.rs  maker.rs  maker_cfd.rs  maker_cfd_actor.rs  maker_inc_connections.rs  maker_inc_connections_actor.rs  model.rs  monitor.rs  oracle.rs  projection.rs  rollover_maker.rs  rollover_taker.rs  routes.rs  routes_maker.rs  routes_taker.rs  setup_contract.rs  setup_maker.rs  setup_taker.rs  taker.rs  taker_cfd.rs  taker_cfd_actor.rs  taker_inc_message_actor.rs  to_sse_event.rs  wire.rs
daemon/src/model/: cfd.rs
daemon/tests/: happy_path.rs
daemon/tests/harness/: mod.rs
docs/asset/: state_machine.puml
frontend/: package.json
frontend/maker/: package.json
frontend/maker/src/: App.tsx
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CFD.tsx
frontend/taker/: package.json
frontend/taker/src/: App.tsx
taker-frontend/: package.json
