[package]
name = "daemon"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
bitcoin = "0.27"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
rust_decimal = { version = "1.15", features = ["serde-float"] }
rust_decimal_macros = "1.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "process", "fs", "net"] }
uuid = "0.8"